# crewai_team_development_for_website_redesign_and_optimization

./: .env  README.md  pyproject.toml  requirements.txt  setup.py
src/crewai_team_development_for_website_redesign_and_optimization/: crew.py  main.py
src/crewai_team_development_for_website_redesign_and_optimization/config/: agents.yaml  config.yaml  tasks.yaml
src/crewai_team_development_for_website_redesign_and_optimization/output/: report.md
src/crewai_team_development_for_website_redesign_and_optimization/output/redesigned_site/: index.html
src/crewai_team_development_for_website_redesign_and_optimization/output/redesigned_site/css/: responsive.css  styles.css
src/crewai_team_development_for_website_redesign_and_optimization/output/redesigned_site/js/: main.js
