[project]
name = "crewai_team_development_for_website_redesign_and_optimization"
version = "0.1.0"
description = "crewai_team_development_for_website_redesign_and_optimization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.1"
dependencies = [
    "crewai>=0.11.2"
]

[project.scripts]
crewai_team_development_for_website_redesign_and_optimization = "crewai_team_development_for_website_redesign_and_optimization.main:run"
run_crew = "crewai_team_development_for_website_redesign_and_optimization.main:run"
train = "crewai_team_development_for_website_redesign_and_optimization.main:train"
replay = "crewai_team_development_for_website_redesign_and_optimization.main:replay"
test = "crewai_team_development_for_website_redesign_and_optimization.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
